--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+resilience4j.retry.instances.sample-api.maxRetryAttempts=5
+resilience4j.retry.instances.sample-api.waitDuration=1s
+resilience4j.retry.instances.sample-api.enableExponentialBackOff=true
+resilience4j.ratelimiter.instances.default.limitForPeriod=2
+resilience4j.ratelimiter.instances.default.limitRefreshPeriod=10s
+
+resilience4j.bulkhead.instances.default.maxConcurrentCalls=10
+
